# ChangeLog for app-misc/dateutils
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-misc/dateutils/ChangeLog,v 1.23 2015/03/08 16:50:49 radhermit Exp $

*dateutils-0.3.2 (08 Mar 2015)

  08 Mar 2015; Tim Harder <radhermit@gentoo.org> +dateutils-0.3.2.ebuild:
  Version bump.

*dateutils-0.3.1 (08 Dec 2014)

  08 Dec 2014; Tim Harder <radhermit@gentoo.org> +dateutils-0.3.1.ebuild:
  Version bump.

*dateutils-0.2.7 (30 Jan 2014)

  30 Jan 2014; Tim Harder <radhermit@gentoo.org> +dateutils-0.2.7.ebuild:
  Version bump.

*dateutils-0.2.6 (29 Jan 2014)

  29 Jan 2014; Tim Harder <radhermit@gentoo.org> +dateutils-0.2.6.ebuild:
  Version bump.

*dateutils-0.2.5 (24 Jul 2013)

  24 Jul 2013; Tim Harder <radhermit@gentoo.org> +dateutils-0.2.5.ebuild:
  Version bump.

  04 Mar 2013; Tim Harder <radhermit@gentoo.org> -dateutils-0.2.2.ebuild:
  Remove old.

*dateutils-0.2.4 (04 Mar 2013)

  04 Mar 2013; Tim Harder <radhermit@gentoo.org> dateutils-0.2.3.ebuild,
  +dateutils-0.2.4.ebuild:
  Version bump and block sys-infiniband/dapl for bug #429810.

  15 Sep 2012; Tim Harder <radhermit@gentoo.org> -dateutils-0.2.1.ebuild:
  Remove old.

*dateutils-0.2.3 (15 Sep 2012)

  15 Sep 2012; Tim Harder <radhermit@gentoo.org> +dateutils-0.2.3.ebuild:
  Version bump.

  21 Jul 2012; Tim Harder <radhermit@gentoo.org> -dateutils-0.2.0.ebuild:
  Remove old.

*dateutils-0.2.2 (21 Jul 2012)

  21 Jul 2012; Tim Harder <radhermit@gentoo.org> +dateutils-0.2.2.ebuild:
  Version bump.

  19 Jun 2012; Tim Harder <radhermit@gentoo.org> -dateutils-0.1.10.ebuild:
  Remove old.

*dateutils-0.2.1 (19 Jun 2012)

  19 Jun 2012; Tim Harder <radhermit@gentoo.org> +dateutils-0.2.1.ebuild:
  Version bump.

  10 Apr 2012; Tim Harder <radhermit@gentoo.org> -dateutils-0.1.9.ebuild:
  Remove old.

*dateutils-0.2.0 (10 Apr 2012)

  10 Apr 2012; Tim Harder <radhermit@gentoo.org> +dateutils-0.2.0.ebuild:
  Version bump.
