@@ -1,30 +1,22 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST dateutils-0.2.3.tar.xz 317220 SHA256 5404956c86e28a15efc211eaab2759699314915d1c2ac2226a380ab2d6c194d7 SHA512 6793b2ff8519b862b737585f497a000626d13ed9e6f9fcc35a0d86fce35ca30f41d22b1673df5f4b92dab44a2e7d4a1dd23fc4be89b426e2761c27bb7897b497 WHIRLPOOL 183084cba5524ac1f03c9dd41e08883abbe18de6327fb41671c376358053577558474f2b31f78259885e1ac128a6be30cde17a871a3b96aae0590c7bcf01a3a4
-DIST dateutils-0.2.4.tar.xz 475160 SHA256 8695d012e2588fcb2705b037b07ab58ce3473f3789877013873f2f0d0ad30d82 SHA512 bf94a55cbfcac037c2aec4271a42f682faa3e7d78b81f3019402fb3b03e5c666ae42135af086ea054bf46a6a4a9efe3acaaac07442e0b14fc14d5afbca2f5714 WHIRLPOOL 1f5ea8e7b4a7e172607be491c13e8ccf958f1f58825a6cff21d047132306331c9781bac95edb5748dd90b3c4d3486ca7149f45597a01d67f20647636e942e349
-DIST dateutils-0.2.5.tar.xz 478180 SHA256 7ecf1f92e1282f4975031f63148b5c778ce70b404a30846fb6bc5de64d3f3211 SHA512 495d5f522db02a6c612ad56942b0e46fddb2fb373ed0dfd6c1081b4d3dd80fa2e6f0eaa947a28921e9739c8b94572aade7b6405858ad169706c9cddd4c743a0f WHIRLPOOL 0e3496e84d95022a93fb8e443b782d5d7a31d9ff7ee332c5a3e83270cf40ae51237b754042d6894007fd6f06d142ab1b4b7c41d9761f1cfca123103ded969c0c
-DIST dateutils-0.2.6.tar.xz 485740 SHA256 1d476498cbe9e5c788d5160f1c134a07a631061784b51a52fe05fbf6a56c3440 SHA512 463ef90ab33978dc97607dc0e17e6c666c1b9f724d0a140e7fc76dbe8f44117859442c46a5061253e0abe2c36f6a5e4409b5acc900428034c6f74ad50f57b111 WHIRLPOOL 90b0cad4e6729ae8b4fecda2bfe98856acd74c6f9b18b7536a5dc0503869771bdebba52526e39c5fbc6dbc4d29ee35c701fa6b0aac812a8429422974e07ee2aa
 DIST dateutils-0.2.7.tar.xz 490456 SHA256 f7d0c502d79dec4a604ebc30e7c44988d7095bd303137d1fa652720350337042 SHA512 6e066b91da706abfd16f34d5a07a9f586b83720f7bde392c1dfd8666741b2a5245101545f36e2319ac6dce5b089bc1f90517916981c830d8993fcacc2927efdb WHIRLPOOL 8702375706a3c5514ec753fe166766860e01871296e482c3a4ea0b24b5295c03da8eeb0f14fce06e6e7b5ea678d982c2154ace3ca9def9869951d268133d1ed6
 DIST dateutils-0.3.1.tar.xz 586848 SHA256 b34f9d0bcb831e91c7ad3e3d17e56a8efbed11db302a2ee22437fd85dce11b19 SHA512 cbf691b0ef8c815159d262796bb5e7292547794610efb99772a51c8bd20e8f23e36be28c6c8a0ffa04445bf7b13bc8fe58bc44a1ba356e1b224b631d561422d9 WHIRLPOOL d2971d06c71166b7f81c83ad517d395482c8603b879e181cd6926b14b5877b02b20b9b972e88757d411a04d8f19035a7651e259fafe8cde387915b89bbc9762e
 DIST dateutils-0.3.2.tar.xz 586156 SHA256 551620b01c08d5feffb68fde6bb669fe09275dd316a79aeca0efcbe3ec774a3e SHA512 0b04e48ad5438425784250eac5d9dbf851b00548d8970d98f3ffa599003a845b22db4ef01693686f01f13c528f2ab86ab46ec0049cd4e05afd6b53c54eaede33 WHIRLPOOL deb08d0e89b0a3784af1b4e9d23759ea3c5484e9775842ae90a36ac89d2711acc976cc857ecf2543137aca5d24b37b5674dee3d2a0dd2f5067a740bf58da2754
-EBUILD dateutils-0.2.3.ebuild 589 SHA256 5cc19405c63697e604f9dc3ce4e784bad4afb81931a44639befb75b74ced79c4 SHA512 b98d24a9c5ea30efc044c292f543fa11875a2f32d4badcf05293cb4de7fa639a2e9f35a60f99ccf6bd16d1717ada76128aa597b7de957255d9e2e94b4e0acdcf WHIRLPOOL 9a631b5e0b9427de02261e27475dd6098b83ae10924eed449b1512c9e4d1adf9f1f9fa8e92b6146fa349ed6cdc423811ae502b4508fdc7103373c8f924cbf33e
-EBUILD dateutils-0.2.4.ebuild 595 SHA256 07e94894ba4500c5f896914a0af9b7b5c89114b693f013a55ff5a5fcf139f3f9 SHA512 3b66e89373453e2faa054e4e1cfc732194d5aa9d310061c2927032179c97443bfe003bb9d46ead0a7d2f66c30bf34335bea4eb74b408b1ccab8f889e6f3b3b4a WHIRLPOOL d97e01f7e6eb6d16e7e95d23bab07149b9f2e98e1752ad5175766ff563fa4764b5c31d775c9a35ba318ca99b977cd4ea6cd2936f57041fc319867e0ad749b981
-EBUILD dateutils-0.2.5.ebuild 595 SHA256 dc0cccd9260d3dfb8e72ebe60176fe3698ed8ce5f226846d4976785229300ad8 SHA512 7e0feb5d0f5c104190e8a1d15e5fc18c32a212e910d1a83d20985ca45559c0cfa7157ade7414ca3e57e5efe73ec077272c1371a3521c2eb5176d51fb28c476dc WHIRLPOOL 9f78a716871b96449c031cf66ba7c7acbe485fe1c987144ac76c81dbc69d6fc563db8c321b27497feca30a5a21e326238c82725cacd61fdd0ba35f7ab53976e7
-EBUILD dateutils-0.2.6.ebuild 735 SHA256 fa6e1afd619a326b0e1d1dfaf8715abf5db1ea8d2ca8719c7ed416aadcca3b9e SHA512 32ee379b8f2c19207c293de3d2381d1b3b43450cef8feddc768dd7714cd94a6ce9ecea8e0d4e79d3729cc3d896e798f9cb320014ad363da0bb75df41f1489fa8 WHIRLPOOL ff5747b8f9d590c10f477270070ac93589e683d30b8a24e40f83cc6dc2d0f743fd70cf3c396bd0aad6aeab607a11a9203b01a065bdbc16d7aa09e10b46a6e60e
 EBUILD dateutils-0.2.7.ebuild 735 SHA256 c6d1f60710938d1dd722453d10605449cfcb68ef6b97c2966c222a664a883dee SHA512 06b44c51cb62bb9f3b35a0a009f23df2d2c517a46396ba9d22f928e9bed658cd07e1ee3e3a6f8f2abc6f56cf941462ebdf41f2518c58dfbe7d1ef33d579829c3 WHIRLPOOL 0783e8d3d8c3e2e00d8ed4c8b60c5f624fef45b99b9ab9e9aec3064ea2f16edc0cfba2f09788f276b69875e227801920493044e9c7424d02fd5cf8a770cd12e3
 EBUILD dateutils-0.3.1.ebuild 735 SHA256 b5651e3dcdf746502112691a525bee5520aed36fa7f580045d05eadcdc4ab6b9 SHA512 1e1cdc25e31cd1b74fff35144e95de7bc4f4a947b693d0645e52d88c59c8bfb33808bde650c07704f51f274df373210f24ba0605aca2c3b71cd9dc5bfeafff90 WHIRLPOOL 28b77ee317a366f0d0c4202337aa2546d279fedc8c7af8f772d53f2cdc90dd80e46a8307c3929f1b548800e2c6d81eefe33e6712a09af2f7ec12c8663e502c6d
 EBUILD dateutils-0.3.2.ebuild 735 SHA256 52775b538f2bd7217da13d81e2a521ccfe8a11fac709c9b0b97432e058e48776 SHA512 30100da5d994c356db411dc8a640ea1b3a90b18ee264a3b6c94391cf5bfe9b83841e23c17fea218f0edeb43f1a5df8f0419ddca68c3f1041a4f1c5d46fcfd5e5 WHIRLPOOL 46bad0a3b4b275c54d7b6bdf5b0d155ae8cf3d64321cf2d78db55770b792a4527683c652e6e3ccd6234c821569418bc4e297eab77c7cc88d534c5feaaa3a7f30
-MISC ChangeLog 3199 SHA256 18a34d81339c97426221331cff5d009177fb9755255c66bbe17c68bab4119830 SHA512 27a46e9f125d9844796994052ee519898394dc0ba8d245b622958c0d11c3dbccf2ce28b3b3d8758d2b28436e52ee9aac73885684863563a96ee9ca2fb396c559 WHIRLPOOL adafa448d54d5beff1aece5993cec5302e29a23785fae946dec6ecb170c9ab528d0f9661150dd22d93ae73f81bb3819662ebe7b986b58710d05bd809f30ed362
+MISC ChangeLog 3365 SHA256 28f5b419fdac6649483150f8cc7706e81b0ee3868d916beb8a1b0e203ffde59d SHA512 c615b1bdf6e9e5f54130276758e269ac4d97d7ee616d43425e24f08a3ca7e0c7f6ffc37896423795b63cfad8f2f3e3fb73bd14ea3da5b62345ea106aa6665f32 WHIRLPOOL e652db3b5807d8b09e5a2993c7a622c61cb6e7005e8c9fb95f23fa88e96cf53e44c3c13e4b0326187b1ad2de217546df3c4d59bcaa1f11fe2d64bcdf1bbf8636
 MISC metadata.xml 232 SHA256 a778e40f66cb2fa35529e4f45cb8356c8b1b109163cd939396f02e8ea6aa5f1a SHA512 6952f63da1c92a4ed7ddb87b5eb4003d123f0b7af6ffdbc9118159c97ddf18917e8ac7727285a42c07c64e52a40335bc2ef9f17261557617beb8c2226a391873 WHIRLPOOL 0a4441f075f8af01588da2aac3e03732f93463b8bea5e46749d37e1468452735d15f45243b930b3346c93734f8aa235a492030445fee471a95d2c5998f08e7de
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQEcBAEBCAAGBQJU/H33AAoJEEqz6FtPBkyj/OsH/REdvzvi8hVU2AH9F+cxNk3R
-JDtsCb+ua0EhFXGPy1x5x3Ei6kBk7yasZrIgZ2qQPd4Fmji1quO680POKcW5qgF1
-/koZmbqO16CIINKSQmmIkemq3tVwtmVwjtyvsYIEEEGbNSWu2C4C8teNGEWEbdmT
-8RodVfmA8GaqMiSNtNr816jDfd3hkmuTpof5Jkh0R8VdXAUIc8yZZnjpQzXrH4JH
-vWONgcfmAZdBxmR23c6um/VpyZ0asQGZF2jVW4H6WQbe7Wfe59ZaKblbeRRPQNSW
-naF14jJzUa3o7qBJOK0opxiEKwsgThTS9qm5An7zm+Q5tZGmftqPoxD7KU9LFKg=
-=GTJ1
+iQEcBAEBCAAGBQJU/H4aAAoJEEqz6FtPBkyjs2UH/AvkZn+RTh0DUezOlXE+IR3v
+pH4wGxBsRS+TGtTLC+dpSd5TnPeCO7mBN3VjTlDgKdkMg6ZqO3eE5/qW8TD0h6to
+6n2lq9He3XyLrCltT2kk0+NZ8ZWgeH6Uk96f/Xm2Wf+A1ZHJ3cwODCbDEv2PbUgE
+DiKz6X6ku8xwn56Ya4OYuag18hjeliO0GoYIpM9nk5/C8ZSywEj1+TYqSqqcYlX/
+0xfZ3jEJJFoJ8HDTm67HRbjGbzrTtir4yAwFwHDSsUaSL2h0WOWtRZ8pKhp4Awf9
+H8aYFu6XL3aJb4E2I5EDfhV6UKON1y7nIziv0hLzQDNSgxifJv8WMXYxnd3cuvI=
+=7RGl
 -----END PGP SIGNATURE-----
