@@ -1,6 +1,10 @@
 # ChangeLog for app-misc/dateutils
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/dateutils/ChangeLog,v 1.23 2015/03/08 16:50:49 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/dateutils/ChangeLog,v 1.24 2015/03/08 16:51:27 radhermit Exp $
+
+  08 Mar 2015; Tim Harder <radhermit@gentoo.org> -dateutils-0.2.3.ebuild,
+  -dateutils-0.2.4.ebuild, -dateutils-0.2.5.ebuild, -dateutils-0.2.6.ebuild:
+  Remove old.
 
 *dateutils-0.3.2 (08 Mar 2015)
 
